# soql-generator

./: Cargo.toml  README.md  lib.rs
.github/workflows/: ci.yml
src/: cache.rs  engine.rs  hint.rs  main.rs  salesforce.rs
src/engine/: ast.rs  lexer.rs  parse.rs  parser.rs  querygen.rs  token.rs
