[package]
name = "soql-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.11.14", features = ["blocking", "json"]}
rustyline = "11.0.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}
urlencoding = "2.1.2"
webbrowser = "0.8.7"
