[package]
name = "soql-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = {version= "0.11.14", features = ["blocking", "json"]}
rustyline = { version = "11.0.0", features = ["derive"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
termion = "2.0.1"
tokio = {version = "1.26.0", features = ["full"]}
urlencoding = "2.1.2"
webbrowser = "0.8.7"
